--- a/opencv/nuclio/function.yaml
+++ b/opencv/nuclio/function.yaml
@@ -9,7 +9,7 @@ metadata:
 
 spec:
   description: Fast Online Object Tracking and Segmentation
-  runtime: 'python:3.8.10'
+  runtime: 'python:3.8'
   handler: main:handler
   eventTimeout: 30s
   env:
@@ -25,7 +25,7 @@ spec:
         - kind: USER
           value: root
         - kind: RUN
-          value: apt update 
+          value: apt update && apt-get install -y python3-pip libglib2.0-0
         - kind: RUN
           value: pip install opencv-contrib-python==4.7.0.72
         - kind: WORKDIR
